fix: code line/word wrap support

--- a/themes/lotusdocs/assets/docs/scss/custom/plugins/chroma/_default.scss
+++ b/themes/lotusdocs/assets/docs/scss/custom/plugins/chroma/_default.scss
@@ -51,6 +51,8 @@
     // Style for the code element and its child spans
     code {
         padding: 0 !important;
+        white-space: pre-wrap !important;
+        word-wrap: break-word !important;
 
         span[style*="display:flex"] {
             padding-left: 0.1rem !important;
